remove obsolete classes and fix a bug that leaves a small gap between menu and top of body

--- a/static/css/site.css
+++ b/static/css/site.css
@@ -1,127 +1,4 @@
 
-.right {
-    float: right;
-    padding-right: 26px;
-}
-.header {
-    width: 100%;
-    height: 1cm;
-    position: fixed;
-    top: 0px;
-    background: white;
-}
-.header + div {
-    margin-top: 2cm;
-}
-
-/* hovev pulldown menu */
-.nav-menu-bar {
-    background: steelblue;
-    padding: 4px 0px;
-    margin: 0 0;
-    -position: absolute;
-    width: 100%;
-    -bottom: 0;
-}
-.nav-menu {
-    display: inline-block;
-    color: gold;
-    font-weight: bold;
-    padding: 2px 4px 2px 8px;
-    margin: 0 0;
-}
-.nav-menu:hover {
-    color: yellow;
-}
-.nav-menu > a {
-    text-decoration: none;
-    color: inherit;
-}
-.nav-menu-item {
-    display: none;
-    position: absolute;
-    font-weight: normal;
-    background: steelblue;
-    padding-bottom: 8px;
-    border-radius: 4px;
-}
-.nav-menu-item hr {
-    width: 80%;
-}
-.nav-menu-item a {
-    display: block;
-    text-decoration: none;
-    color: white;
-    padding: 1px 4px 0 8px;
-}
-.nav-menu:hover .nav-menu-item {
-    display: block;
-}
-
-
-/* accordine sidebar, exclusive(input=radio) or multi-select(input=checkbox) */
-.nav-sidebar {
-    -position: absolute;
-    -top: 32px;
-    -background: #def;
-    width: 240px;
-    min-height: 300px;
-    margin: 0 0 0 0;
-    padding: 12px 16px 0 4px;
-    -border-right: thin dotted black;
-    float: left;
-}
-.nav-sidebar hr {
-    width: 75%;
-    margin-left: 0px;
-    margin-top: 5mm;
-}
-.nav-sidebar label {
-    font-weight: bold;
-    display: block;
-}
-.nav-sidebar-title {
-    margin-bottom: 8px;
-    font-weight: bold;
-    font-size: 150%;
-}
-.nav-sidebar a {
-    display: block;
-    text-decoration: none;
-    margin: 0;
-}
-.nav-sidebar input {
-    display: none;
-    cursor: pointer;
-}
-.nav-sidebar-cascade a {
-    margin: 0 0 0 5mm;
-}
-.nav-sidebar input + div {
-    display: none;
-}
-.nav-sidebar input:checked {
-    cursor: default;
-}
-.nav-sidebar input:checked + div {
-    display: block;
-}
-.nav-sidebar-direct {
-    margin-top: 12px;
-}
-.nav-sidebar-section {
-    font-weight: bold;
-}
-
-.a-list a {
-    display: block;
-    text-decoration: none;
-}
-
-.van-content {
-    padding: 4px 8px;
-}
-
 .template-debug {
     margin-top: 60px;
     padding: 12px;
@@ -213,37 +90,6 @@ div.href a {
     box-shadow: none;
 }
 
-.taxnomy {
-    display: flex;
-    flex-flow: row wrap;
-}
-.taxonomy-term {
- display: relative;
- padding: 4px;
- margin: 12px;
- box-shadow: 4px 4px 8px lightgray;
- border-radius: 8px;
- background: #f8f8ff;
-}
-.term-count {
-    float: right;
-    right: 8px;
-}
-.taxonomy-term h2 {
-    display: block;
-    border-bottom: thin solid lightgray;
-    margin: 0;
-    padding: 0px;
-}
-.taxonomy-term-href {
-    margin: 2px 8px;
-}
-.taxonomy-term a {
-    display: block;
-    text-decoration: none;
-    -background: burlywood;
-}
-
 .vue-app {
     background: #eee;
     border-radius: 8px;
@@ -316,7 +162,7 @@ body {
     display: flex;
     align-items: center;
     height: 50px;
-    padding: 0 20px;
+    -padding: 0 20px;
 }
 
 .menu-item {
@@ -333,7 +179,7 @@ body {
     transition: all 0.3s ease;
 }
 
-.menu, a {
+.menu a {
     text-decoration: none;
     text-wrap: nowrap;
     margin: 4px 0px;
@@ -539,7 +385,6 @@ body {
 /* Responsive design */
 @media (max-width: 768px) {
     .menu {
-        padding: 0 10px;
         height: 45px;
     }
     
@@ -553,11 +398,7 @@ body {
     }
 }
 
-@media (max-width: 600px) {
-    .menu {
-        padding: 0 5px;
-    }
-    
+@media (max-width: 600px) {    
     /*
     .menu-item span {
         -display: none;
